--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 theme: jekyll-theme-hacker
+title: [trevcan's blog static site]
+description: [no, i don't serve cookies, please go \[elsewhere\](https://i.imgur.com/ksl2b1b.jpeg)]
 
 include:
  - "www/**/*.md"
