--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-hacker
 title: [trevcan's blog static site]
-description: [no, i don't serve cookies]
+description: ["no, i don't serve cookies"]
 
 include:
  - "www/**/*.md"
