test add idnex.md

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# theme: jekyll-theme-hacker
+theme: jekyll-theme-hacker
 title: [trevcan's blog static site]
 description: ["no, i don't serve cookies. Please [make your own](https://i.imgur.com/ksl2b1b.jpeg)"]
 
@@ -12,7 +12,7 @@ plugins:
   - jekyll_feed
 
 
-remote_theme: tareqdandachi/jekyll-shell-theme
+# remote_theme: tareqdandachi/jekyll-shell-theme
 
 sass:
   style: compressed
