try shell jekyll theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-theme: jekyll-theme-hacker
+# theme: jekyll-theme-hacker
+theme: jekyll-shell-theme
 title: [trevcan's blog static site]
 description: ["no, i don't serve cookies. Please [make your own](https://i.imgur.com/ksl2b1b.jpeg)"]
 
