Revert "maybe this time..."
This reverts commit 079dc2e0890f792fbee001145aef17ce2276e5e7.

--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ include:
  - "*.md"
 
 plugins:
-  #  - jekyll-remote-theme 
+  - jekyll-remote-theme 
   - jemoji
   - jekyll_feed
 
 
-    # remote_theme: tareqdandachi/jekyll-shell-theme
+remote_theme: tareqdandachi/jekyll-shell-theme
 
 sass:
   style: compressed
