--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,24 @@
-# theme: jekyll-theme-hacker
-theme: jekyll-shell-theme
-title: [trevcan's blog static site]
-description: ["no, i don't serve cookies. Please [make your own](https://i.imgur.com/ksl2b1b.jpeg)"]
-
-include:
- - "www/**/*.md"
- - "*.md"
+title: "jekyll-shell-theme"
+tagline: "A jekyll theme that looks like a shell/terminal"
+description: "This is a preview of jekyll-shell-theme."
+github_username: tareqdandachi
+baseurl: "/jekyll-shell-theme"
+url: "https://tareqdandachi.github.io"
 
 plugins:
-  - jekyll-remote-theme 
   - jemoji
-  - jekyll_feed
-
-
-remote_theme: tareqdandachi/jekyll-shell-theme
+  - jekyll-sitemap
+  - jekyll-seo-tag
 
 sass:
   style: compressed
-    #  - jekyll-feed
 
+  highlighter: rouge
+
+  header_pages:
+    - index.md
+    - read-me.md
+    - preview.md
+
+      # set the size of the text to 'large' or 'small', default is small
+      # font-size: small
