--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: /
 source: .
 destination: ./_site
 permalink: /:title
-paginate: 3
+paginate: 6
 paginate_path: /page/:num/
 
 defaults:
@@ -20,6 +20,19 @@ defaults:
       type: "posts"
     values:
       layout: "post"
+  -
+    scope:
+      path: "/www/*.md"
+    values:
+      layout: "post"
+
+
+include:
+   - "www/**/*.md"
+   - "*.md"
+   - "www/*.md"
+
+
 
 future: true
 plugins:
