--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ paginate_path: /page/:num/
 defaults:
   -
     scope:
-      path: "***.md"
-        # type: "posts"
+      path: "www/*.md"
+        type: "posts"
     values:
       layout: "post"
 
